manifest/objects/DOI__c.object
<CustomObject>
    <description>Deconstructed Order Item - used for large order objects.  Built to facilitate stitching together multiple records from the same attempt (MUID).  Additional design goal is to facilitate updates by skipping items that have not changed.</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <description>GUID of parent item (account/contact)</description>
        <label>GUID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD5Hash__c</fullName>
        <description>Used for change detection and prevent unnecessary DML.</description>
        <label>MD5Hash</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUID__c</fullName>
        <label>MUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>Name of the functional object (e.g. Order, Opportunity)</description>
        <label>ObjectName</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <description>Salesforce Id of the top-level record for processing (e.g. Order vs Order Item)</description>
        <label>ParentId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <description>JSON data</description>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <description>Allows code to dynamically switch parsers and processing logic.</description>
        <label>Processor</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceId__c</fullName>
        <description>Salesforce ID used as an internal key for lookups across the process</description>
        <externalId>true</externalId>
        <label>SourceId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>DOI</label>
    <nameField>
        <displayFormat>DOI-{00000000}</displayFormat>
        <label>DOI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DOIS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>